--- a/source/pug/components/ui/main-slider.pug
+++ b/source/pug/components/ui/main-slider.pug
@@ -1,6 +1,6 @@
 .swiper.main-slider(data-single-slide-slider)
     .swiper-wrapper
-        .swiper-slide(style={'background-image': 'url(../img/main-slider.jpg)'})
+        .swiper-slide(style={'background-image': 'url(img/main-slider.jpg)'})
             .container
                 h2.main-slider_title Купите
                     br
