slider img link fix

--- a/source/pug/components/ui/main-slider.pug
+++ b/source/pug/components/ui/main-slider.pug
@@ -10,7 +10,7 @@
                     span.main-slider_title-bold-italic  шторы
                 p «Lorem» — производитель изделий для внутренней и внешней lorem
                 a(href="#").button.button--white.main-slider_button калькулятор
-        .swiper-slide(style={'background-image': 'url(../img/main-slider.jpg)'})
+        .swiper-slide(style={'background-image': 'url(img/main-slider.jpg)'})
             .container
                 h2.main-slider_title Купите
                     br
@@ -20,7 +20,7 @@
                     span.main-slider_title-bold-italic  шторы
                 p «Lorem» — производитель изделий для внутренней и внешней lorem
                 a(href="#").button.button--white.main-slider_button калькулятор
-        .swiper-slide(style={'background-image': 'url(../img/main-slider.jpg)'})
+        .swiper-slide(style={'background-image': 'url(img/main-slider.jpg)'})
             .container
                 h2.main-slider_title Купите
                     br
