--- a/source/pug/components/ui/main-slider.pug
+++ b/source/pug/components/ui/main-slider.pug
@@ -4,30 +4,30 @@
             .container
                 h2.main-slider_title Купите
                     br
-                    span.main-slider_title-bold-italic что-то
+                    span.main-slider_title-bold.italic что-то
                     br
                     | и еще
-                    span.main-slider_title-bold-italic  шторы
+                    span.main-slider_title-bold.italic  шторы
                 p «Lorem» — производитель изделий для внутренней и внешней lorem
                 a(href="#").button.button--white.main-slider_button калькулятор
         .swiper-slide(style={'background-image': 'url(img/main-slider.jpg)'})
             .container
                 h2.main-slider_title Купите
                     br
-                    span.main-slider_title-bold-italic что-то
+                    span.main-slider_title-bold.italic что-то
                     br
                     | и еще
-                    span.main-slider_title-bold-italic  шторы
+                    span.main-slider_title-bold.italic  шторы
                 p «Lorem» — производитель изделий для внутренней и внешней lorem
                 a(href="#").button.button--white.main-slider_button калькулятор
         .swiper-slide(style={'background-image': 'url(img/main-slider.jpg)'})
             .container
                 h2.main-slider_title Купите
                     br
-                    span.main-slider_title-bold-italic что-то
+                    span.main-slider_title-bold.italic что-то
                     br
                     | и еще
-                    span.main-slider_title-bold-italic  шторы
+                    span.main-slider_title-bold.italic  шторы
                 p «Lorem» — производитель изделий для внутренней и внешней lorem
                 a(href="#").button.button--white.main-slider_button калькулятор
     .container
