--- a/source/sass/blocks/ui/main-slider.scss
+++ b/source/sass/blocks/ui/main-slider.scss
@@ -24,9 +24,8 @@
         }
     }
 
-    .main-slider_title-bold-italic {
+    .main-slider_title-bold {
         font-weight: 600;
-        font-style: italic;
     }
 
     .main-slider_button {
