--- a/source/sass/blocks/ui/side-menu.scss
+++ b/source/sass/blocks/ui/side-menu.scss
@@ -81,6 +81,7 @@
     height: 100%;
     background-color: var(--color-light-green);
     transition: var(--default-transition);
+    overflow: hidden;
 }
 
 .side-menu_container,
